kubernetes/apps/external/birdnet/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: birdnet
  labels:
    homelab.mpdavis.com/exposure: tailnet
spec:
  entryPoints:
    - tailnet
  routes:
    - match: Host(`birdnet.${DOMAIN}`)
      kind: Rule
      services:
        - name: birdnet
          port: 80
  tls: {}
